tests/baselines/reference/resolutionCandidateFromPackageJsonField2(moduleresolution=bundler).errors.txt
error TS5095: Option 'bundler' can only be used when 'module' is set to 'es2015' or later.
tests/cases/compiler/test.ts(1,19): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.


!!! error TS5095: Option 'bundler' can only be used when 'module' is set to 'es2015' or later.
==== tests/cases/compiler/tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "paths": {
                "foo/*": ["./dist/*"],
                "baz/*.ts": ["./types/*.d.ts"]
            }
        }
    }
    
==== tests/cases/compiler/dist/bar.ts (0 errors) ====
    export const a = 1234;
    
==== tests/cases/compiler/types/main.d.ts (0 errors) ====
    export const b: string;
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import { a } from "foo/bar.ts";
                      ~~~~~~~~~~~~
!!! error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
    import { b } from "baz/main.ts";
    